--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Клиентам</a>
+<!--                        <div class="button-link__arrow_1"></div>-->
+<!--                            <ul class="navigation__sublist">-->
+<!--                                <li class="sublist__item"><a href="#" class="sublist__link">О компании</a></li>-->
+<!--                                <li class="sublist__item"><a href="#" class="sublist__link">Клиентам</a></li>-->
+<!--                                <li class="sublist__item"><a href="#" class="sublist__link">Доставка</a></li>-->
+<!--                            </ul>-->
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Услуи</a>
+<!--                        <div class="button-link__arrow_1"></div>-->
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Скидки и акции</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Клиентам</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Контакты</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Цены</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">Наши работы</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#" class="navigation__link">О компании</a>
+                    </li>
+                </ul>
+                <div class="navigation__contacts">
+                    <button class="button button-green">Звонок</button>
+                    <a class="navigation__number" href="tel:+79587628270">+79587628270</a>
+                    <span>С 8:00 до 18:00 без выходных</span>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+<!--        <div class="container">-->
+<!--            <img src="#" alt="">-->
+<!--            <span>Название компании</span>-->
+<!--        </div>-->
+    </main>
+    <footer>
 
+    </footer>
 </body>
 </html>
