--- a/index.html
+++ b/index.html
@@ -268,7 +268,25 @@
                     <span class="quiz_title">
                         Расчитай онлайн
                     </span>
-                    <!--                progress_bar-->
+                    <div class="quiz_progress">
+                        <div class="progress_bar">
+                            <div class="current_progress" id="progress"></div>
+                            <div class="progress_circle active">1</div>
+                            <div class="progress_circle">2</div>
+                            <div class="progress_circle">3</div>
+                            <div class="progress_circle">4</div>
+                            <div class="progress_circle">5</div>
+                            <div class="progress_circle">6</div>
+                            <div class="progress_circle">7</div>
+                            <div class="progress_circle progress_circle-prize">
+                                <svg width="51" height="52" viewBox="0 0 51 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M23.5097 17.5253H10.9458C8.97156 17.5253 7.98444 17.5253 7.37113 18.1386C6.75781 18.7519 6.75781 19.739 6.75781 21.7133V23.8073C6.75781 25.7815 6.75781 26.7686 7.37113 27.3819C7.95019 27.961 8.86247 27.9933 10.6242 27.9951H23.5097V17.5253ZM13.0398 32.1831V40.5592C13.0398 42.5334 13.0398 43.5205 13.6531 44.1338C14.2664 44.7472 15.2535 44.7472 17.2278 44.7472H23.5097V32.1831H13.0398ZM27.6977 44.7472H33.9797C35.9539 44.7472 36.941 44.7472 37.5543 44.1338C38.1676 43.5205 38.1676 42.5334 38.1676 40.5592V32.1831H27.6977V44.7472ZM40.5833 27.9951C42.3449 27.9933 43.2572 27.961 43.8363 27.3819C44.4496 26.7686 44.4496 25.7815 44.4496 23.8073V21.7133C44.4496 19.739 44.4496 18.7519 43.8363 18.1386C43.223 17.5253 42.2359 17.5253 40.2616 17.5253H27.6977V27.9951H40.5833Z" fill="white"/>
+                                    <path d="M40.2617 10.4737V10.0923C40.2617 7.56809 37.7887 5.78566 35.394 6.5839C32.3984 7.58245 29.6763 9.26477 27.4435 11.4976L25.6038 13.3373V15.4313H33.3001C33.7503 15.4313 34.1975 15.3587 34.6245 15.2164L37.545 14.2428C39.1674 13.7021 40.2617 12.1838 40.2617 10.4737Z" fill="white"/>
+                                    <path d="M10.9473 10.4737V10.0923C10.9473 7.56809 13.4202 5.78566 15.815 6.5839C18.8106 7.58245 21.5327 9.26477 23.7655 11.4976L25.6052 13.3373V15.4313H17.9088C17.4587 15.4313 17.0115 15.3587 16.5845 15.2164L13.6639 14.2428C12.0416 13.7021 10.9473 12.1838 10.9473 10.4737Z" fill="white"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="quiz_bottom">
                     <div class="quiz_card">
@@ -302,13 +320,13 @@
                             </div>
                         </div>
                         <div class="quiz_buttons">
-                            <button class="button button_black button-back">
+                            <button class="button-quiz button-prev disabled">
                                 <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1.72656 6.83259L1.01469 6.12072L0.302819 6.83259L1.01469 7.54447L1.72656 6.83259ZM16.8274 7.83933C17.3834 7.83933 17.8342 7.3886 17.8342 6.83259C17.8342 6.27659 17.3834 5.82585 16.8274 5.82585V7.83933ZM7.05503 0.0803643L1.01469 6.12072L2.43844 7.54447L8.47878 1.50411L7.05503 0.0803643ZM1.01469 7.54447L7.05503 13.5848L8.47878 12.1611L2.43844 6.12072L1.01469 7.54447ZM1.72656 7.83933H16.8274V5.82585H1.72656V7.83933Z" fill="white"/>
                                 </svg>
                                 <span>Назад</span>
                             </button>
-                            <button class="button button_black button-next">
+                            <button class="button-quiz button-next">
                                 <span>Вперед</span>
                                 <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M16.957 6.83259L17.6689 6.12072L18.3808 6.83259L17.6689 7.54447L16.957 6.83259ZM1.85617 7.83933C1.30017 7.83933 0.849432 7.3886 0.849432 6.83259C0.849432 6.27659 1.30017 5.82585 1.85617 5.82585V7.83933ZM11.6286 0.0803643L17.6689 6.12072L16.2452 7.54447L10.2048 1.50411L11.6286 0.0803643ZM17.6689 7.54447L11.6286 13.5848L10.2048 12.1611L16.2452 6.12072L17.6689 7.54447ZM16.957 7.83933H1.85617V5.82585H16.957V7.83933Z" fill="white"/>
