--- a/index.html
+++ b/index.html
@@ -290,9 +290,11 @@
                 </div>
                 <div class="quiz_bottom">
                     <div class="quiz_card">
-                        <span class="quiz_number">
-                            Вопрос 1
-                        </span>
+                        <div class="quiz_number">
+                            <span>Вопрос</span>
+                            &nbsp;
+                            <span id="number">1</span>
+                        </div>
                         <div class="quiz_variants">
                             <div class="variants_item">
                                 <img src="img/quiz_var.png" alt="">
@@ -319,8 +321,8 @@
                                 <span>Вариант 1</span>
                             </div>
                         </div>
-                        <div class="quiz_buttons">
-                            <button class="button-quiz button-prev disabled">
+                        <div class="quiz_buttons" data>
+                            <button class="button-quiz button-prev" disabled>
                                 <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1.72656 6.83259L1.01469 6.12072L0.302819 6.83259L1.01469 7.54447L1.72656 6.83259ZM16.8274 7.83933C17.3834 7.83933 17.8342 7.3886 17.8342 6.83259C17.8342 6.27659 17.3834 5.82585 16.8274 5.82585V7.83933ZM7.05503 0.0803643L1.01469 6.12072L2.43844 7.54447L8.47878 1.50411L7.05503 0.0803643ZM1.01469 7.54447L7.05503 13.5848L8.47878 12.1611L2.43844 6.12072L1.01469 7.54447ZM1.72656 7.83933H16.8274V5.82585H1.72656V7.83933Z" fill="white"/>
                                 </svg>
