--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
 <footer>
 
 </footer>
-<script src="script.js"></script>
+<script src="/assets/js/script.js"></script>
+<script src="/assets/js/quiz.js"></script>
 </body>
 </html>
