Started price section

--- a/index.html
+++ b/index.html
@@ -1585,37 +1585,91 @@
                                     <circle cx="64.3962" cy="64.3962" r="64.3962" fill="#00CA81"/>
                                     <path d="M92.5293 60.6483C95.4147 62.3142 95.4147 66.479 92.5293 68.1449L53.576 90.6345C50.6906 92.3004 47.0838 90.218 47.0838 86.8862L47.0838 41.9069C47.0838 38.5751 50.6906 36.4927 53.576 38.1586L92.5293 60.6483Z" fill="white"/>
                                 </svg>
-                                <img src="img/videos_bg.png" alt="">
+                                <img src="img/videos_bg-1.png" alt="">
                             </a>
                         </div>
                         <div class="videos__link">
-                            <a href="https://www.youtube.com/watch?v=-VASStsSWL4&ab_channel=Leaddom" class="videos__video" data-fancybox>
+                            <a href="https://www.youtube.com/watch?v=Oqd1cyvT44c&ab_channel=Leaddom" class="videos__video" data-fancybox>
                                 <svg width="129" height="129" viewBox="0 0 129 129" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="64.3962" cy="64.3962" r="64.3962" fill="#00CA81"/>
                                     <path d="M92.5293 60.6483C95.4147 62.3142 95.4147 66.479 92.5293 68.1449L53.576 90.6345C50.6906 92.3004 47.0838 90.218 47.0838 86.8862L47.0838 41.9069C47.0838 38.5751 50.6906 36.4927 53.576 38.1586L92.5293 60.6483Z" fill="white"/>
                                 </svg>
-                                <img src="img/videos_bg.png" alt="">
+                                <img src="img/videos_bg-2.png" alt="">
                             </a>
                         </div>
                         <div class="videos__link">
-                            <a href="https://www.youtube.com/watch?v=-VASStsSWL4&ab_channel=Leaddom" class="videos__video" data-fancybox>
+                            <a href="https://www.youtube.com/watch?v=xFLhvClIQG4&ab_channel=Leaddom" class="videos__video" data-fancybox>
                                 <svg width="129" height="129" viewBox="0 0 129 129" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="64.3962" cy="64.3962" r="64.3962" fill="#00CA81"/>
                                     <path d="M92.5293 60.6483C95.4147 62.3142 95.4147 66.479 92.5293 68.1449L53.576 90.6345C50.6906 92.3004 47.0838 90.218 47.0838 86.8862L47.0838 41.9069C47.0838 38.5751 50.6906 36.4927 53.576 38.1586L92.5293 60.6483Z" fill="white"/>
                                 </svg>
-                                <img src="img/videos_bg.png" alt="">
+                                <img src="img/videos_bg-3.png" alt="">
                             </a>
                         </div>
                         <div class="videos__link">
-                            <a href="https://www.youtube.com/watch?v=-VASStsSWL4&ab_channel=Leaddom" class="videos__video" data-fancybox>
+                            <a href="https://www.youtube.com/watch?v=9Jr7iFOEJ4I&ab_channel=Leaddom" class="videos__video" data-fancybox>
                                 <svg width="129" height="129" viewBox="0 0 129 129" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle cx="64.3962" cy="64.3962" r="64.3962" fill="#00CA81"/>
                                     <path d="M92.5293 60.6483C95.4147 62.3142 95.4147 66.479 92.5293 68.1449L53.576 90.6345C50.6906 92.3004 47.0838 90.218 47.0838 86.8862L47.0838 41.9069C47.0838 38.5751 50.6906 36.4927 53.576 38.1586L92.5293 60.6483Z" fill="white"/>
                                 </svg>
-                                <img src="img/videos_bg.png" alt="">
+                                <img src="img/videos_bg-4.png" alt="">
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="price_list">
+                <div class="application_form form">
+                    <div class="form__title">
+                        Отправить заявку и получить
+                        <br>
+                        смету или расчет
+                    </div>
+                    <div class="form-bottom">
+                        <div class="form_sideinfo sideinfo">
+                            <div class="sideinfo__img">
+                                <img src="img/sideinfo_img.png" alt="">
+                            </div>
+                            <div class="sideinfo__about about">
+                                <div class="about__name">
+                                    Мария Иванова
+                                </div>
+                                <div class="about__jobtitle">
+                                    Арт-директор
+                                </div>
+                                <div class="about__link">
+                                    <a href="">48 проектов реализовано</a>
+                                </div>
+                                <div class="about__add">
+                                    Нажми на любое из этих
+                                    <br>
+                                    случайных слов и найди свой
+                                    <br>
+                                    подарок!
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form__block">
+                            <form action="" method="get" class="form__block">
+                                <div class="form__name-input">
+                                    <label for="name"></label>
+                                    <input placeholder="Ваше имя" type="text" name="name" id="name" required />
+                                </div>
+                                <div class="form__email-input">
+                                    <label for="email"></label>
+                                    <input placeholder="Ваш телефон" type="text" name="email" id="email" required />
+                                </div>
+                                <div class="form__button">
+                                    <button class="button button_green button_form" type="submit">
+                                        Отправить
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
