Started work tabs

--- a/index.html
+++ b/index.html
@@ -1657,9 +1657,9 @@
                                     <label for="name"></label>
                                     <input placeholder="Ваше имя" type="text" name="name" id="name" required />
                                 </div>
-                                <div class="form__email-input">
-                                    <label for="email"></label>
-                                    <input placeholder="Ваш телефон" type="text" name="email" id="email" required />
+                                <div class="form__phone-input">
+                                    <label for="phone"></label>
+                                    <input placeholder="Ваш телефон" type="text" name="phone" id="phone" required />
                                 </div>
                                 <div class="form__button">
                                     <button class="button button_green button_form" type="submit">
@@ -1669,7 +1669,51 @@
                             </form>
                         </div>
                     </div>
-
+                </div>
+                <div class="prices-main">
+                    <div class="prices__top">
+                        <div class="prices_title">
+                            Прайс лист на все виды работы
+                        </div>
+                        <div class="prices_info">
+                            <div class="info_text">
+                                Для ознакомления с ценами вы можете
+                                <br>
+                                скачать pdf файл
+                            </div>
+                            <div class="prices_button">
+                                <button class="button button_green button_download" type="button">
+                                    Скачать PDF
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="prices_tabs">
+                    <div class="tabs__tab">
+                        <div class="tab__header">
+                            Малярно штукатурные
+                            <svg width="21" height="11" viewBox="0 0 21 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.4607 10.2925L20.051 0.476897H0.870348L10.4607 10.2925Z" fill="black"/>
+                            </svg>
+                        </div>
+                        <div class="tab__list">
+                            <div class="list__top">
+                                <div class="list__top-name">
+                                    Наименование ремонтных работ
+                                </div>
+                                <div class="list__top-number">
+                                    Ед. изм
+                                </div>
+                                <div class="list__top-price">
+                                    Цена за ед. (Руб)
+                                </div>
+                                <div class="list__top-info">
+                                    Дополнительная информация
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
